--- a/onlinestore/package.json
+++ b/onlinestore/package.json
@@ -5,10 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "router": "^1.3.3"
   },
   "scripts": {
